[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://ComboCount.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI.gd" type="Script" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Floor" type="Node2D" parent="."]
position = Vector2( 0, 580 )

[node name="TimerRoundStart" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TimerNextRound" type="Timer" parent="."]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="Top" type="MarginContainer" parent="UI"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bars" type="HBoxContainer" parent="UI/Top"]
margin_right = 1024.0
margin_bottom = 49.0

[node name="HealthBar" parent="UI/Top/Bars" instance=ExtResource( 2 )]
margin_right = 500.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="Timer" type="MarginContainer" parent="UI/Top/Bars"]
margin_left = 504.0
margin_right = 520.0
margin_bottom = 49.0

[node name="Number" type="Label" parent="UI/Top/Bars/Timer"]
margin_top = 17.0
margin_right = 16.0
margin_bottom = 31.0
text = "99"

[node name="HealthBar2" parent="UI/Top/Bars" instance=ExtResource( 2 )]
margin_left = 524.0
margin_right = 1024.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 250, 0 )
size_flags_horizontal = 3

[node name="ComboCounts" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboCount" parent="UI/ComboCounts" instance=ExtResource( 4 )]
margin_left = 164.0
margin_top = 112.0
margin_right = 180.0
margin_bottom = 126.0

[node name="ComboCount2" parent="UI/ComboCounts" instance=ExtResource( 4 )]
margin_left = 923.0
margin_top = 113.0
margin_right = 939.0
margin_bottom = 127.0
[connection signal="timeout" from="TimerRoundStart" to="." method="fight"]
[connection signal="timeout" from="TimerNextRound" to="." method="next_round"]
